--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -76,8 +76,12 @@ bind-key -n M-9 select-window -t 9
 bind-key -n "M-Left" previous-window
 bind-key -n "M-Right" next-window
 
-bind-key -n "M-d" previous-window
-bind-key -n "M-f" next-window
+unbind-key -n "M-d" #previous-window
+unbind-key -n "M-f" #next-window
+
+#unbind-key -n "M-d" previous-window
+#unbind-key -n "M-f" next-window
+
 
 #Quick window selection
 bind-key w choose-tree -Zw
