--- a/dot/.config/kitty/kitty.conf
+++ b/dot/.config/kitty/kitty.conf
@@ -39,7 +39,7 @@ bold_italic_font family='AdwaitaMono Nerd Font Mono' postscript_name=AdwaitaMono
 # --------------------------
 # Cursor Settings
 # --------------------------
-cursor_shape beam
+cursor_shape block
 cursor_beam_thickness 2
 cursor_blink_interval 0
 #cursor_trail 9
@@ -231,8 +231,10 @@ map ctrl+9 goto_tab 9
 map ctrl+0 goto_tab 10
 map kitty_mod+o goto_layout stack
 map kitty_mod+space next_layout
-map kitty_mod+equal     change_font_size all +2.0
-map kitty_mod+minus     change_font_size all -2.0
+#map kitty_mod+equal     change_font_size all +2.0
+#map kitty_mod+minus     change_font_size all -2.0
+map ctrl+plus     change_font_size all +2.0
+map ctrl+minus     change_font_size all -2.0
 map kitty_mod+backspace change_font_size all 0
 map kitty_mod+e kitten hints
 map kitty_mod+p>f kitten hints --type path --program -
