--- a/dot/.config/picom/picom.conf
+++ b/dot/.config/picom/picom.conf
@@ -100,7 +100,7 @@ fade-delta = 3;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 0.8;
+inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -111,8 +111,7 @@ inactive-opacity-override = true
 # inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 0.9
-active-opacity = 0.9
+active-opacity = 0.95
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 inactive-dim = 0.0
@@ -181,10 +180,10 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "gaussian" ;
-blur-size = 0
+blur-size = 99
 blur-deviation = 1;
 #
-# blur-strength = 5;
+blur-strength = 55;
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
