--- a/dot/.config/polybar/config.ini
+++ b/dot/.config/polybar/config.ini
@@ -87,6 +87,9 @@ font-7 = "Symbols Nerd Font Mono:pixelsize=16:style=Regular:antialias=false;3"
 ; pwmenu icon
 font-8 = "Symbols Nerd Font Mono:pixelsize=10:style=Regular:antialias=false;3"
 
+; jgmenu (applications) icon
+font-9 = "Symbols Nerd Font Mono:pixelsize=14:style=Regular:antialias=false;3"
+
 modules-left = xworkspaces filesystem memory cpu temperature keydbg 
 modules-center = date 
 modules-right = lhost rhost pulseaudio backlight batteries micvol systray pwmenu
@@ -488,9 +491,18 @@ ramp-capacity-4 = 󰁹
 ;==========================================================
 
 
-[module/pwmenu]
+[module/menu]
 type = custom/text
 format-font = 9
+format = ☰
+format-padding = 2
+format-foreground = ${colors.foreground}
+format-background = ${colors.background}
+click-left = ~/.config/jgmenu/launch-jgmenu.sh &
+
+[module/pwmenu]
+type = custom/text
+format-font = 8
 format = 
 format-padding=1
 format-foreground = ${colors.foreground}
